<resources>
    <string name="app_name">Campus</string>

    <string name="login">Логін</string>
    <string name="password">Пароль</string>
    <string name="log_in">вхід до кампусу</string>
    <string name="error_text">Поле обов\'язкове для заповнення</string>
    <string name="nav_bulletins">Оголошення</string>
    <string name="nav_discipline_choice">Вибір дисциплін</string>
    <string name="nav_main">Головна</string>
    <string name="nav_exit">Вихід</string>
    <string name="nav_rnp">РНП</string>
    <string name="nav_np">НП</string>
    <string name="main_direction">Напрям:</string>
    <string name="main_study_level">Освітній рівень:</string>
    <string name="main_course">Курс:</string>
    <string name="main_group">Группа:</string>
    <string name="main_start_year">Рік зарахування:</string>
    <string name="main_current_year">Поточний навчальний рік:</string>
    <string name="course">Курс</string>
    <string name="semestr">семестр</string>
    <string name="dc_year">Навчальний рік</string>
    <string name="dc_semestr">Семестр</string>
    <string name="dc_status">Статус</string>
    <string name="dc_status_available">Вибір доступний</string>
    <string name="dc_status_done">Вибір зроблений</string>
    <string name="dc_status_unavailable">Вибір не доступний</string>
    <string name="dc_go_to_choice">перейти до вибору</string>
    <string name="dc_item_component_name">Назва компоненту:</string>
    <string name="dc_item_block_name">Назва блоку:</string>
    <string name="dc_item_disciplines">Дисципліни:</string>
    <string name="dc_item_discipline_count">Кількість дисциплін для вибору:</string>
    <string name="subject_item_subdivision">Підрозділ:</string>
    <string name="subject_item_name">Назва:</string>
    <string name="subject_item_description">Опис(англ):</string>
    <string name="subject_item_max_students">Максимальна кількість студентів:</string>
    <string name="subject_item_students">Кількість студентів:</string>
    <string name="save_results">зберегти результати</string>

    <string name="np_title">НП спеціалізацій</string>
    <string name="np_faculty">Факультет:</string>
    <string name="np_cathedra">Кафедра:</string>
    <string name="np_specialty">Спеціальність:</string>
    <string name="np_specialization">Спеціалізація:</string>
    <string name="np_study_year">Навчальний рік:</string>
    <string name="np_okr">ОР:</string>
    <string name="np_study_form">Форма навчання:</string>
    <string name="np_filter_selected_button">Показати результати</string>
    <string name="np_details_name">Назва:</string>
    <string name="np_details_">Назва:</string>
    <string name="np_detail_date_change">Дата зміни:</string>
    <string name="np_details_actuality">Актуальність:</string>
    <string name="np_details_term_year">Термін рік:</string>
    <string name="np_details_term_month">Термін місяць:</string>
    <string name="np_details_header">Деталі</string>
    <string name="no_value">Не вказано</string>

    <string name="np_button">Нп</string>
    <string name="discipline_button">Дисципліни</string>
    <string name="credit_module_button">Кредитні модулі</string>

    <string name="rnp_title">Робочі навчальні плани</string>
    <string name="rnp_course">Курс</string>
    <string name="rnp_details_name">РНП</string>
    <string name="rnp_details_protocol">№ протоколу</string>

    <string name="discipline_title">Довідник дисциплін</string>
    <string name="discipline_info">Опис</string>
    <string name="discipline_cycle_title">Цикл:</string>
    <string name="discipline_code_title">Код:</string>
    <string name="discipline_overcredit_title">Позакредитність:</string>

    <string name="credit_title">Довідник кредитних модулів</string>
    <string name="credit_discipline">Дисципліна</string>
    <string name="credit_info_title">Додаткова інформація</string>
    <string name="credit_decree_title">Розподіл за наказом</string>
    <string name="credit_decree_cathedra">Кафедра, що викладає:</string>
    <string name="credit_decree_year">Навчальний рік:</string>
    <string name="credit_info_knowledge">Знання:</string>
    <string name="credit_info_skill">Вміння:</string>
    <string name="credit_info_competence">Навички:</string>

</resources>
