<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/np_detail_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:text="@string/np_details_header"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/rnp_details_name"/>

            <TextView
                android:id="@+id/rnp_detail_name"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/np_specialization"/>

            <TextView
                android:id="@+id/rnp_detail_specialization"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/np_study_year"/>

            <TextView
                android:id="@+id/rnp_detail_study_year"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/course"/>

            <TextView
                android:id="@+id/rnp_detail_course"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/np_study_form"/>

            <TextView
                android:id="@+id/rnp_detail_study_form"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/np_okr"/>

            <TextView
                android:id="@+id/rnp_detail_okr"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/np_details_actuality"/>

            <TextView
                android:id="@+id/rnp_detail_actuality"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/np_detail_date_change"/>

            <TextView
                android:id="@+id/rnp_detail_date_change"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/rnp_details_protocol"/>

            <TextView
                android:id="@+id/rnp_detail_protocol"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>