<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_year" />

        <TextView
            android:id="@+id/semestrStudyYearTextView"
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_semestr" />

        <TextView
            android:id="@+id/semestrStudySemestrTextView"
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_status" />

        <TextView
            android:id="@+id/semestrStudyStatusTextView"
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/semestrChooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dc_go_to_choice" />
    </LinearLayout>
</android.support.v7.widget.CardView>