<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/credit_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text="@string/credit_info_title" />

    <TextView
        android:id="@+id/credit_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/credit_info_knowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_info_knowledge"/>

    <TextView
        android:id="@+id/credit_info_knowledge_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/credit_info_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_info_skill"/>

    <TextView
        android:id="@+id/credit_info_skill_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/credit_info_competence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_info_competence"/>

    <TextView
        android:id="@+id/credit_info_competence_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>

</LinearLayout>