<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragment.main.StartFragment">

    <android.support.v7.widget.CardView
        style="@style/cardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_direction" />

            <TextView
                android:id="@+id/mainDirectionTextView"
                style="@style/textViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6.050201 Системна інженерія" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_study_level" />

            <TextView
                android:id="@+id/mainStudyLevelTextView"
                style="@style/textViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Бакалавр" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_course" />

            <TextView
                android:id="@+id/mainCourseTextView"
                style="@style/textViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_group" />

            <TextView
                android:id="@+id/mainGroupTextView"
                style="@style/textViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="IK-51" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_start_year" />

            <TextView
                android:id="@+id/mainStartYearTextView"
                style="@style/textViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2015" />

            <TextView
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_current_year" />

            <TextView
                android:id="@+id/mainCurrentYearTextView"
                style="@style/textViewStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2015-2016" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
