<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_item_component_name" />

        <TextView
            android:id="@+id/dcItemComponentTextView"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_item_block_name" />

        <TextView
            android:id="@+id/dcItemBlockTextView"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_item_discipline_count" />

        <TextView
            android:id="@+id/dcItemDcCountTextView"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/textViewStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dc_item_disciplines" />

        <LinearLayout
            android:id="@+id/dcItemRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</android.support.v7.widget.CardView>

