<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/credit_decree_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text="@string/credit_decree_title"/>

    <TextView
        android:id="@+id/credit_decree_cathedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_decree_cathedra"/>

    <TextView
        android:id="@+id/credit_decree_cathedra_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/credit_decree_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_decree_year"/>

    <TextView
        android:id="@+id/credit_decree_year_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>

</LinearLayout>