<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/rnp_title"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_cathedra"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_cathedra"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_specialty"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_specialty"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_specialization"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_specialization"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_study_year"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_study_year"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_okr"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_okr"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/np_study_form"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_study_form"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rnp_course"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/rnp_course"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <Button
                android:id="@+id/rnp_filters_selected_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:text="@string/np_filter_selected_button"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>